--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,11 @@
     "authors": [
         {
             "name": "Tom Gorny",
-            "email": "tom@gornymedia.com"
+            "email": "devtomash@gmail.com"
         }
     ],
     "require": {
-        "php": ">=7.1.3"
+        "laravel/framework": "^6.0 || ^7.0 || ^8.0 || ^9.0 || ^10.0"
     },
     "autoload": {
         "psr-4": {
