--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "laravel/framework": "^6.0 || ^7.0 || ^8.0 || ^9.0 || ^10.0"
+        "laravel/framework": "^11.0 || ^12.0"
     },
     "autoload": {
         "psr-4": {
